package src;

public class CustomerReceiptPanel {
}
