@startuml
skinparam classAttributeIconSize 0

FrameManager o-- MainMenuController
MainMenuPanel *-- MainMenuController
FrameManager o-- ZutatenBestandController
ZutatenBestandPanel *-- ZutatenBestandController

class ZutatenBestandController implements ActionListener

class FrameManager {
	- JFrame frame;
	- LoginView loginView;
	- MainMenuPanel mainMenuPanel;
	- BestellungsHistoriePanel bestellungsHistoriePanel;
	- BookkeepingPanel bookkeepingPanel;
	- BusinessReceiptPanel businessReceiptPanel;
	- CustomerReceiptPanel customerReceiptPanel;
	- DeliveryDataPanel deliveryDataPanel;
	- PLZPanel plzPanel;
	- QuestionDeliveryPanel questionDeliveryPanel;
	- SpeisekartePanel speisekartePanel;
	- ZutatenBestandPanel zutatenBestandPanel;
	- ZutatenCheckerPanel zutatenCheckerPanel;
	- ZutatenWarningPanel zutatenWarningPanel;
	- PickupDataPanel pickupDataPanel;


+ FrameController()
+ void initialize (All Panels)
- void setAllInvisible()
+ void showQuestionDelivery()
+ void showBestellungsHistorie()
+ void showBookkeeping()
+ void showLogin()
..some methods..
+ void showMainView()
+ void showPLZ()
+ void showSpeisekarte()
+ void showDeliveryData()
+ void showCustomerReceipt()
+ void showPickup()
}

class MainMenuPanel extends JPanel {

	- FrameManager frameManager
	- MainMenuPanel mainMenuPanel
	- QuestionDeliveryPanel questionDeliveryPanel
	- BestellungsHistoriePanel bestellungsHistoriePanel
	- ZutatenBestandPanel zutatenBestandPanel
	- BookkeepingPanel bookkeepingPanel
	- JLabel companyLabel
	- JButton orderPlacement
	- JButton orderHistorie
	- JButton warehouse
	- JButton bookkeeping
	- JButton logoutButton

	+ MainMenuPanel(FrameManager frameManager, Alle_Panels)
	}

class MainMenuController implements ActionListener {

	+ enum Command
	- FrameManager frameManager;
	- Command processedCommand;
	+ MainMenuController(FrameManager frameManager, Command command)
	+ void actionPerformed(ActionEvent e)
}

class ZutatenBestandPanel extends JPanel {
	- FrameManager frameManager;
	- JLabel companyLabel
	- JButton backButton
	+ ZutatenBestandPanel(FrameManager frameManager)
}

class CustomerReceiptPanel extends JPanel {
    - FrameManager frameManager;
    - JLabel companyLabel
    - JButton backButton
    - CustomerReceiptPanel(FrameManager frameManager)
    }

class PLZPanel extends JPanel {
    - Integer convertedTextToInt = 0;
    - FrameManager frameManager;
    - JLabel deliveryLabel
    - JLabel plzLabel
    - JTextField plzInput
    - JButton checkerButton
    - JButton backButton
    - JLabel statusLabel;
    + PLZPanel(FrameManager frameManager)
}


class DeliveryDataPanel extends JPanel {
    - FrameManager frameManager;
    - JLabel deliveryLabel
    - JLabel firstnameLabel
    - JTextField firstnameInput
    - JLabel secondnameLabel
    - JTextField secondnameInput
    - JLabel adressLabel
    - JTextField addressInput
    - JLabel floorLabel
    - JTextField floorInput
    - JLabel telefonLabel
    - JTextField telefonInput
    - JButton nextButton
    - JButton killSwitchButton
    + DeliveryDataPanel(FrameManager frameManager)
    }


    class PickupDataPanel extends JPanel {
        - FrameManager frameManager;
        - JLabel deliveryLabel
        - JLabel firstnameLabel
        - JTextField firstnameInput
        - JLabel secondnameLabel
        - JTextField secondnameInput
        - JButton nextButton
        - JButton killSwitchButton
        + PickupDataPanel(FrameManager frameManager)
        }

class SpeisekartePanel extends JPanel {

    - FrameManager frameManager;
    - JLabel speiseKarteLabel
    - JLabel pizzaLabel
    - JLabel preisLabel
    - JLabel anzahlLabel
    - ArrayList<PizzaInterface> availablePizzas;
    - JButton weiterButton
    - JButton killswitchButton
    + SpeisekartePanel(FrameManager frameManager, ArrayList<PizzaInterface> availablePizzas)
}

@enduml
